--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1197,7 +1197,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #7700af;
+  background: #a841c2;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
@@ -2169,14 +2169,6 @@ ul.breadcrumb li + li:last-child {
 }
 .tag-cloud a:hover {
   color: var(--link-hover-color) !important;
-}
-.gt-header a,
-.gt-comments a,
-.gt-popup a {
-  border-bottom: none;
-}
-.gt-container .gt-popup .gt-action.is--active::before {
-  top: 0.7em;
 }
 .header {
   margin: 0 auto;
