--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1224,7 +1224,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #86be73;
+    background: #ff6e75;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
