--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -40,3 +40,45 @@
 img {
   border-radius: 8px;
 }
+
+// 英文换行
+code {
+  word-break:break-all;
+}
+
+.index_list {
+  background: var(--content-bg-color);
+  border-radius: $border-radius;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.06), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 -1px 0.5px 0 rgba(0, 0, 0, 0.09);
+  list-style: none;
+  padding: 40px 20px;
+  min-height: 50vh;
+  margin-bottom: 12px;
+  margin-top: 0;
+
+  li {
+    border-bottom: 1px dashed $grey-lighter;
+    &:last-child {
+      border-bottom: none;
+    }
+    a {
+      transition-property: background-color;
+      padding: 10px;
+      padding: 5px 20px;
+      position: relative;
+      transition-property: background-color;
+      display: flex;
+      align-items: center;
+      border: none;
+      justify-content: space-between;
+      &:hover {
+        background: var(--menu-item-bg-color);
+      }
+      time {
+        color: #999;
+      }
+    }
+  }
+}
