--- a/source/_data/sidebar.njk
+++ b/source/_data/sidebar.njk
@@ -1,9 +1,16 @@
-<div class="sidebar-button animated">
-  <a href="https://discord.gg/qmkgkY3jaG">
-    <i class="fab fa-discord"></i>
-    Discord Chat
+<div class="sidebar-button-2">
+  <a href="https://github.com/gxr404" rel="noopener external nofollow noreferrer" target="_blank" class="exturl" title="GitHub → https://github.com/gxr404">
+    <i class="fab fa-github fa-fw"></i>&nbsp;gxr404
+  </a>
+  <a href="mailto:gxr40404@gmail.com" rel="noopener external nofollow noreferrer" target="_blank" class="exturl" title="E-Mail → mailto:gxr40404@gmail.com">
+    <i class="fa fa-envelope fa-fw"></i>&nbsp;gxr40404@gmail.com
+  </a>
+  <a href="https://github-activity-one.vercel.app/gxr404?theme=dark" rel="noopener external nofollow noreferrer" target="_blank" class="exturl">
+    <i class="fa fa-bullhorn"></i>&nbsp;Github Activity
   </a>
 </div>
-<div class="cc-license animated" itemprop="sponsor">
-  <span class="exturl cc-opacity" title="Deploy with Netlify → https://www.netlify.com" data-url="aHR0cHM6Ly93d3cubmV0bGlmeS5jb20="><img width="120" src="https://www.netlify.com/img/global/badges/netlify-dark.svg" alt="Netlify"></span>
+
+<div style="margin:0 -10px; border-top: 1px dashed #ccc;">
+  <img class="github_start_info light" src="https://github-readme-stats-lime-sigma-23.vercel.app/api?username=gxr404&show_icons=true&hide_rank=true&theme=default&hide_border=true&show_owner=false&description_lines_count=10&title_color=555&icon_color=555&text_color=555#gh-light-mode-only">
+  <img class="github_start_info dark" src="https://github-readme-stats-lime-sigma-23.vercel.app/api?username=gxr404&show_icons=true&hide_rank=true&theme=github_dark_dimmed&bg_color=00000000&hide_border=true&title_color=fff&icon_color=fff&text_color=fff#gh-dark-mode-only">
 </div>
