--- a/source/_data/sidebar.njk
+++ b/source/_data/sidebar.njk
@@ -6,7 +6,7 @@
     <i class="fa fa-envelope fa-fw"></i>&nbsp;gxr40404@gmail.com
   </a>
   <a href="https://github-activity-one.vercel.app/gxr404?theme=dark" rel="noopener external nofollow noreferrer" target="_blank" class="exturl">
-    <i class="fa fa-bullhorn"></i>&nbsp;Github Activity
+    <i class="fa fa-bullhorn" style="vertical-align: 0px"></i>&nbsp;Github Activity
   </a>
 </div>
 
