--- a/source/_data/variables.styl
+++ b/source/_data/variables.styl
@@ -2,3 +2,7 @@ $note-border-radius = 0;
 $border-radius-inner = 0 0 6px 6px;
 $border-radius = 6px;
 // $sidebar-highlight = $blue-bright;
+$primary = hsl(210 100% 50%);
+$sidebar-highlight = $primary;
+$sidebar-nav-hover-color = $primary;
+$link-hover-color = $primary;
