chore: publish blog

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -42,7 +42,7 @@ img {
 }
 
 // 英文换行
-code {
+code, li {
   word-break:break-all;
 }
 
@@ -251,23 +251,16 @@ body {
     }
   }
 }
-+desktop() {
-  .sidebar .sidebar-button-2 {
-      // border-bottom: 1px dotted #ccc;
-      //border-top: 1px dotted #ccc;
-    }
-}
-
 
 .menu .menu-item a {
   &:hover {
     color: black;
   }
-
 }
 
 ::selection {
-  background: $primary;
+  // background: $primary;
+  background-color: black;
   color: white;
 }
 
@@ -298,11 +291,10 @@ body {
   strong {
     position: relative;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 10' preserveAspectRatio='none'><path d='M0 5 Q 25 10, 50 5 T 100 5 T 150 5 T 200 5' stroke='black' stroke-width='2' fill='none'/></svg>");;
-    width: 100%;
-    background-size: 110px 10px;
+    background-size: 68px 10px;
     background-position: 0 100%;
     background-repeat: repeat-x;
-    padding-bottom: 9px;
+    padding-bottom: 8px;
   }
   .btn {
     border-radius: 4px;
@@ -320,5 +312,52 @@ body {
 .post-toc ol a {
   &:hover {
     color: $primary;
+  }
+}
+
+.main-inner .sub-menu,
+.main-inner .post-block,
+.main-inner .tabs-comment,
+.main-inner > .comments,
+.main-inner .comment-position .comments,
+.main-inner .pagination,
+header.header,
+.sidebar-inner {
+  box-shadow: none !important;
+
+}
+
+.post-block {
+  position: relative;
+  overflow: hidden;
+  .badge {
+    border: 4px solid #000;
+    color: #000;
+    border-radius: 50%;
+    position: absolute;
+    padding: 10px;
+    top: -16px;
+    right: -16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3em;
+    transform: scale(1.4) rotate(45deg);
+    width: 60px;
+    height: 60px;
+    font-weight: bold;
+    opacity: 0.1;
+    &::after {
+      content: '';
+      display: block;
+      border:  2px solid #000;
+      border-radius: 50%;
+      width: 80%;
+      height: 80%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
