--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1302,7 +1302,7 @@ pre code {
     transition: all 0.2s ease-in-out;
   }
   .links-of-author a::before {
-    background: #0822ff;
+    background: #73d730;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
@@ -2973,7 +2973,8 @@ header.header {
 img {
   border-radius: 8px;
 }
-code {
+code,
+li {
   word-break: break-all;
 }
 .post-body .exturl .fa-external-link-alt {
@@ -3150,17 +3151,16 @@ body {
   color: #000;
 }
 ::selection {
-  background: #007fff;
+  background-color: #000;
   color: #fff;
 }
 .post-block strong {
   position: relative;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 10' preserveAspectRatio='none'><path d='M0 5 Q 25 10, 50 5 T 100 5 T 150 5 T 200 5' stroke='black' stroke-width='2' fill='none'/></svg>");
-  width: 100%;
-  background-size: 110px 10px;
+  background-size: 68px 10px;
   background-position: 0 100%;
   background-repeat: repeat-x;
-  padding-bottom: 9px;
+  padding-bottom: 8px;
 }
 .post-block .btn {
   border-radius: 4px;
@@ -3175,4 +3175,48 @@ body {
 }
 .post-toc ol a:hover {
   color: #007fff;
+}
+.main-inner .sub-menu,
+.main-inner .post-block,
+.main-inner .tabs-comment,
+.main-inner > .comments,
+.main-inner .comment-position .comments,
+.main-inner .pagination,
+header.header,
+.sidebar-inner {
+  box-shadow: none !important;
+}
+.post-block {
+  position: relative;
+  overflow: hidden;
+}
+.post-block .badge {
+  border: 4px solid #000;
+  color: #000;
+  border-radius: 50%;
+  position: absolute;
+  padding: 10px;
+  top: -16px;
+  right: -16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3em;
+  transform: scale(1.4) rotate(45deg);
+  width: 60px;
+  height: 60px;
+  font-weight: bold;
+  opacity: 0.1;
+}
+.post-block .badge::after {
+  content: '';
+  display: block;
+  border: 2px solid #000;
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
