--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -361,3 +361,61 @@ header.header,
     }
   }
 }
+
+body{
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 1px;
+    border-radius: 10px;
+    background-color: transparent;
+
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    // border-top-left-radius: 12px;
+    // border-bottom-left-radius: 12px;
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 10px;
+    &:hover {
+      cursor: pointer;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+  }
+}
+
+.site-brand-container {
+  background-color: #fff;
+  position: relative;
+  &:before {
+    content: '';
+    display: block;
+    position: absolute;
+    background-image: url(/images/avatar.png);
+    background-size: 100%;
+    background-position: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    opacity: 0.3;
+    filter: grayscale(80%);
+    // border-radius: 6px;
+  }
+  .site-title {
+    // color: #000;
+    color: var(--link-color);
+    // text-transform: uppercase;
+  }
+}
+.site-author-image {
+  border: 4px dashed #ccc;
+  // border: 4px dashed var(--link-color);
+  padding: 4px;
+}
