--- a/source/_data/sidebar.njk
+++ b/source/_data/sidebar.njk
@@ -10,7 +10,28 @@
   </a>
 </div>
 
-<div style="margin:0 -10px; border-top: 1px dashed #ccc;">
-  <img class="github_start_info light" src="https://github-readme-stats-lime-sigma-23.vercel.app/api?username=gxr404&show_icons=true&hide_rank=true&theme=default&hide_border=true&show_owner=false&description_lines_count=10&title_color=555&icon_color=555&text_color=555#gh-light-mode-only">
-  <img class="github_start_info dark" src="https://github-readme-stats-lime-sigma-23.vercel.app/api?username=gxr404&show_icons=true&hide_rank=true&theme=github_dark_dimmed&bg_color=00000000&hide_border=true&title_color=fff&icon_color=fff&text_color=fff#gh-dark-mode-only">
+<div style="margin:0 -10px; border-top: 1px dashed #ccc; display: none" class="github_profile">
+  <img class="github_start_info light">
 </div>
+<script>
+window.onload = function() {
+  var img = new Image()
+  var src = 'https://github-readme-stats-lime-sigma-23.vercel.app/api?username=gxr404&show_icons=true&hide_rank=true&theme=default&hide_border=true&show_owner=false&description_lines_count=10&title_color=555&icon_color=555&text_color=555#gh-light-mode-only'
+  img.src = src
+  img.style.width=0
+  img.style.height=0
+  document.body.appendChild(img)
+  img.onload = function() {
+    document.querySelector('.github_profile').style.display="block"
+    document.querySelector('.github_profile').querySelector('img').src = src
+    if (img.parentNode) {
+      img.parentNode.removeChild(img);
+    }
+  }
+  img.onerror = function() {
+    if (img.parentNode) {
+      img.parentNode.removeChild(img);
+    }
+  }
+}
+</script>
