--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -190,6 +190,10 @@ body {
 // ========== [!Tip] syntax End ==================
 
 .github_start_info {
+  min-height: 180px;
+  min-width: 100%;
+  background-color:#eee;
+  position: relative;
   &.light{
     display: block;
   }
