--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1302,7 +1302,7 @@ pre code {
     transition: all 0.2s ease-in-out;
   }
   .links-of-author a::before {
-    background: #93f985;
+    background: #df6fff;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
